Just adding a new branch feature1

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <p>This is a new repository for testing purposes.</p>
 <p>Feel free to explore and make changes.</p>
+<p>Remember to commit your changes!</p>
+<p>Happy coding!</p>
